--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,6 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.2.3"
     compile "ch.qos.logback:logback-core:1.2.3"
     compile "org.slf4j:slf4j-api:1.7.25"
+    compileOnly 'org.projectlombok:lombok:1.16.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
