--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'netty-tutorial',
+                'Implementation-Version': version,
+                'Main-Class': 'com.netty.tutorial.http.WaterMarkClient'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
