--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.2.3"
     compile "ch.qos.logback:logback-core:1.2.3"
     compile "org.slf4j:slf4j-api:1.7.25"
+    compile 'org.openjdk.jol:jol-core:0.9'
+    testCompile 'org.openjdk.jol:jol-parent:0.9'
+    testCompile 'org.openjdk.jol:jol-cli:0.9'
+    testCompile 'org.openjdk.jol:jol-samples:0.9'
     compileOnly 'org.projectlombok:lombok:1.16.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
